# ZPR_tetris_AI_using_genetic_algorithm

./: .gitignore  CMakeLists.txt  README.md  install_and_build.sh
docs/: ai_8hpp_source.html  annotated.html  app_8hpp_source.html  classApp-members.html  classApp.html  classGUI-members.html  classGUI.html  classTetris-members.html  classTetris.html  classTetrisBoard-members.html  classTetrisBoard.html  classTetromino-members.html  classTetromino.html  classTetrominoGenerator-members.html  classTetrominoGenerator.html  classes.html  classgenetic__tetris_1_1AI-members.html  classgenetic__tetris_1_1AI.html  classgenetic__tetris_1_1App-members.html  classgenetic__tetris_1_1App.html  classgenetic__tetris_1_1Button-members.html  classgenetic__tetris_1_1Button.html  classgenetic__tetris_1_1Controller-members.html  classgenetic__tetris_1_1Controller.html  classgenetic__tetris_1_1EventManager-members.html  classgenetic__tetris_1_1EventManager.html  classgenetic__tetris_1_1EvolutionaryAlgo-members.html  classgenetic__tetris_1_1EvolutionaryAlgo.html  classgenetic__tetris_1_1EvolveController-members.html  classgenetic__tetris_1_1EvolveController.html  classgenetic__tetris_1_1GUI-members.html  classgenetic__tetris_1_1GUI.html  classgenetic__tetris_1_1GameController-members.html  classgenetic__tetris_1_1GameController.html  classgenetic__tetris_1_1Genome-members.html  classgenetic__tetris_1_1Genome.html  classgenetic__tetris_1_1GenomeFileNotFoundException.html  classgenetic__tetris_1_1IncDecDialog-members.html  classgenetic__tetris_1_1IncDecDialog.html  classgenetic__tetris_1_1MenuController-members.html  (+67 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+23 more)
project/include/: app.hpp  event_manager.hpp  exception.hpp  genetic_ai.hpp  gui.hpp  observer.hpp  sound_manager.hpp  tetris.hpp  tetromino.hpp  tetromino_generator.hpp  utils.hpp
project/include/AI/: ai.hpp  ai_utils.hpp  classic_genetic_algo.hpp  evolutionary_algo.hpp  evolutionary_strategy.hpp  genome.hpp  move.hpp  random_number_generator.hpp
project/include/controller/: controller.hpp  evolve_controller.hpp  game_controller.hpp  menu_controller.hpp
project/include/gui/: gui.hpp  gui_utils.hpp  utils.hpp
project/include/gui/screen/: evolve_screen.hpp  game_screen.hpp  menu_screen.hpp  screen.hpp
project/include/tetris/: tetris.hpp  tetromino.hpp  tetromino_generator.hpp  wall_kicks.hpp
project/src/: app.cpp  func.cpp  genetic_ai.cpp  gui.cpp  helloworld.cpp  main.cpp  sound_manager.cpp  tetris.cpp  tetromino.cpp  tetromino_generator.cpp
project/src/AI/: ai.cpp  ai_utils.cpp  evolutionary_algo.cpp  evolutionary_strategy.cpp  genome.cpp  move.cpp  random_number_generator.cpp
project/src/controller/: evolve_controller.cpp  game_controller.cpp
project/src/gui/: gui.cpp  gui_utils.cpp  utils.cpp
project/src/gui/screen/: evolve_screen.cpp  game_screen.cpp  menu_screen.cpp
project/src/tetris/: tetris.cpp  tetromino.cpp  tetromino_generator.cpp  wall_kicks.cpp
project/tests/: test_boost.cpp  test_catch2.cpp
res/: input.json
res/genomes/: 22gen_100moves.json  25gen_40_moves.json  rate=0.1 step =0.2.json  rate=0.2 step=0.8.json  wykres.py
res/genomes/Rate0.4/: rate=0.4 step=0.2.json  rate=0.4 step=0.4.json  rate=0.4 step=0.8.json
res/genomes/Rate0.8/: rate=0.8 step=0.2.json  rate=0.8 step=0.4.json  rate=0.8 step=0.8 .json
tests/: CMakeLists.txt  main.cpp  test_gui_tetris_integration.cpp  tetris_no_gui.cpp
tests/functional/: test_sfml.cpp  tetris_gui_integration.cpp  tetris_no_gui.cpp
tests/unit/: main.cpp  test_ai.cpp  test_boost.cpp  test_tetris.cpp  tetris.cpp  tetromino_and_generator.cpp
